--- a/bid-service/bid-service-command/pom.xml
+++ b/bid-service/bid-service-command/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>bid-service-command</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.so</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
