--- a/item-service/pom.xml
+++ b/item-service/pom.xml
@@ -16,5 +16,13 @@
 
     <artifactId>item-service</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.so</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
