--- a/item-service/item-service-command-web/pom.xml
+++ b/item-service/item-service-command-web/pom.xml
@@ -10,6 +10,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>item-service-command-web</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.so</groupId>
+            <artifactId>item-service-command</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.8.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
