--- a/item-view/pom.xml
+++ b/item-view/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>item-view</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.so</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
