--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,20 @@
         <module>item-view</module>
     </modules>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>${spring-boot.version}</version>
+    </parent>
+
     <properties>
         <eventuateClientVersion>0.16.0.RELEASE</eventuateClientVersion>
         <eventuateLocalVersion>0.11.0.RELEASE</eventuateLocalVersion>
-        <spring-boot.version>1.4.2.RELEASE</spring-boot.version>
+        <spring-boot.version>1.5.2.RELEASE</spring-boot.version>
         <spring.version>4.3.8.RELEASE</spring.version>
         <springdatajpa.version>1.10.6.RELEASE</springdatajpa.version>
         <springdatacommons.version>1.12.6.RELEASE</springdatacommons.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
@@ -124,12 +131,6 @@
             <artifactId>spring-expression</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jpa</artifactId>
-            <version>${springdatajpa.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
@@ -146,6 +147,10 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
