--- a/bid-view/pom.xml
+++ b/bid-view/pom.xml
@@ -10,17 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>bid-view</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>com.so</groupId>
-            <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
-    </dependencies>
+    <packaging>pom</packaging>
+    <modules>
+        <module>bid-view-query</module>
+        <module>bid-view-query-web</module>
+    </modules>
+
 
 
 </project>
