--- a/item-service/pom.xml
+++ b/item-service/pom.xml
@@ -18,7 +18,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.so</groupId>
+            <groupId>com.so.so</groupId>
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
