--- a/item-view/pom.xml
+++ b/item-view/pom.xml
@@ -10,6 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>item-view</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>item-view-query</module>
+        <module>item-view-query-web</module>
+    </modules>
 
     <dependencies>
         <dependency>
