--- a/item-view/item-view-query/pom.xml
+++ b/item-view/item-view-query/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>microservices</artifactId>
+        <artifactId>item-view</artifactId>
         <groupId>com.so</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <modules>
-        <module>item-service-command</module>
-        <module>item-service-command-web</module>
-    </modules>
 
-    <artifactId>item-service</artifactId>
+    <artifactId>item-view-query</artifactId>
 
     <dependencies>
         <dependency>
@@ -22,7 +17,10 @@
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
     </dependencies>
-
 
 </project>
