--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>-->
         </plugins>
+        <finalName>${project.artifactId}</finalName>
     </build>
 
     <repositories>
