--- a/item-service/item-service-command/pom.xml
+++ b/item-service/item-service-command/pom.xml
@@ -11,5 +11,20 @@
 
     <artifactId>item-service-command</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.eventuate.client.java</groupId>
+            <artifactId>eventuate-client-java-spring</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.eventuate.local.java</groupId>
+            <artifactId>eventuate-local-java-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.eventuate.local.java</groupId>
+            <artifactId>eventuate-local-java-embedded-cdc-autoconfigure</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
