--- a/bid-view/bid-view-query-web/src/main/resources/application.yml
+++ b/bid-view/bid-view-query-web/src/main/resources/application.yml
@@ -1,14 +1,6 @@
+spring:
+  application:
+    name: bid-view
+
 server:
   port: ${PORT:8761}
-
-#standalone
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-    server:
-      waitTimeInMsWhenSyncEmpty: 0
