--- a/bid-service/bid-service-command-web/src/main/resources/application.yml
+++ b/bid-service/bid-service-command-web/src/main/resources/application.yml
@@ -1,14 +1,5 @@
+spring:
+  application:
+    name: bid-command
 server:
   port: ${PORT:8761}
-
-#standalone
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-    server:
-      waitTimeInMsWhenSyncEmpty: 0
