--- a/bid-service/bid-service-command-web/src/main/resources/application.yml
+++ b/bid-service/bid-service-command-web/src/main/resources/application.yml
@@ -3,3 +3,8 @@ spring:
     name: bid-command
 server:
   port: ${PORT:8761}
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://10.200.10.1:8761/eureka/
