--- a/bid-view/bid-view-query-web/src/main/resources/application.yml
+++ b/bid-view/bid-view-query-web/src/main/resources/application.yml
@@ -4,3 +4,9 @@ spring:
 
 server:
   port: ${PORT:8761}
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://10.200.10.1:8761/eureka/
+
