--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -9,18 +9,23 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>bid-view</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>bid-view-query</module>
-        <module>bid-view-query-web</module>
-    </modules>
+    <artifactId>api-gateway</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>com.so</groupId>
             <artifactId>feign-clients</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
     </dependencies>
+
 
 </project>
