--- a/item-view/pom.xml
+++ b/item-view/pom.xml
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>com.so</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>feign-clients</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
