--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>bid-view</module>
         <module>item-view</module>
         <module>discovery</module>
+        <module>api-gateway</module>
+        <module>feign-clients</module>
     </modules>
 
     <parent>
