--- a/bid-view/bid-view-query-web/src/main/resources/application.yml
+++ b/bid-view/bid-view-query-web/src/main/resources/application.yml
@@ -8,5 +8,5 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://10.200.10.1:8761/eureka/
+      defaultZone: http://${EUREKA}/eureka/
 
