--- a/docker-compose-eventuate-local.yml
+++ b/docker-compose-eventuate-local.yml
@@ -5,10 +5,10 @@ zookeeper:
     - 2888:2888
     - 3888:3888
 
-eureka:
-  build: ./discovery
-  ports:
-    - "8761:8761"
+#eureka:
+#  build: ./discovery
+#  ports: env
+#    - "8761:8761"
 
 kafka:
   image: eventuateio/eventuateio-local-kafka:0.10.0
@@ -73,6 +73,7 @@ bidcommandside:
     EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
     EVENTUATELOCAL_CDC_DB_USER_NAME: root
     EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
+    EUREKA: 10.224.8.68:8761
 
 bidqueryside:
   extends:
@@ -95,6 +96,7 @@ bidqueryside:
     EVENTUATELOCAL_CDC_DB_USER_NAME: root
     EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
     SPRING_DATA_MONGODB_URI: mongodb://mongodb/bids
+    EUREKA: 10.224.8.68:8761
 
 itemcommandside:
   extends:
@@ -115,6 +117,7 @@ itemcommandside:
     EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
     EVENTUATELOCAL_CDC_DB_USER_NAME: root
     EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
+    EUREKA: 10.224.8.68:8761
 
 itemqueryside:
   extends:
@@ -137,3 +140,4 @@ itemqueryside:
     EVENTUATELOCAL_CDC_DB_USER_NAME: root
     EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
     SPRING_DATA_MONGODB_URI: mongodb://mongodb/items
+    EUREKA: 10.224.8.68:8761
