Fixes and updates.

--- a/bid-service/bid-service-command-web/src/main/resources/application.yml
+++ b/bid-service/bid-service-command-web/src/main/resources/application.yml
@@ -8,3 +8,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${EUREKA}/eureka/
+  instance:
+    preferIpAddress: true
+    ip-address: ${DOCKER_HOST_IP}
+    non-secure-port: 8081
