--- a/item-view/item-view-query-web/src/main/resources/application.yml
+++ b/item-view/item-view-query-web/src/main/resources/application.yml
@@ -9,5 +9,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${EUREKA}/eureka/
-
+  instance:
+    preferIpAddress: true
+    ip-address: ${DOCKER_HOST_IP}
+    non-secure-port: 8084
 
