--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -3,3 +3,7 @@ spring:
     name: api
 server:
   port: ${PORT:9001}
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://10.200.10.1:8761/eureka/
