--- a/docker-compose-eventuate-local.yml
+++ b/docker-compose-eventuate-local.yml
@@ -5,10 +5,10 @@ zookeeper:
     - 2888:2888
     - 3888:3888
 
-#eureka:
-#  build: ./discovery
-#  ports: env
-#    - "8761:8761"
+eureka:
+  build: ./discovery
+  ports:
+    - 8761:8761
 
 kafka:
   image: eventuateio/eventuateio-local-kafka:0.10.0
@@ -64,6 +64,7 @@ bidcommandside:
     - mysql
     - kafka
     - zookeeper
+  mem_limit: 8g
   environment:
     SPRING_DATASOURCE_URL: jdbc:mysql://mysql/eventuate
     SPRING_DATASOURCE_USERNAME: mysqluser
@@ -87,6 +88,7 @@ bidqueryside:
     - mysql
     - kafka
     - zookeeper
+  mem_limit: 8g
   environment:
     SPRING_DATASOURCE_URL: jdbc:mysql://mysql/eventuate
     SPRING_DATASOURCE_USERNAME: mysqluser
@@ -110,6 +112,7 @@ itemcommandside:
     - mysql
     - kafka
     - zookeeper
+  mem_limit: 8g
   environment:
     SPRING_DATASOURCE_URL: jdbc:mysql://mysql/eventuate
     SPRING_DATASOURCE_USERNAME: mysqluser
@@ -133,6 +136,7 @@ itemqueryside:
     - mysql
     - kafka
     - zookeeper
+  mem_limit: 8g
   environment:
     SPRING_DATASOURCE_URL: jdbc:mysql://mysql/eventuate
     SPRING_DATASOURCE_USERNAME: mysqluser
@@ -145,3 +149,30 @@ itemqueryside:
     SPRING_DATA_MONGODB_URI: mongodb://mongodb/items
     EUREKA: ${DOCKER_HOST_IP}:8761
     DOCKER_HOST_IP: ${DOCKER_HOST_IP}
+
+api-gateway:
+  build: ./api-gateway
+  ports:
+    - 9001:9001
+  links:
+    - mongodb
+    - mysql
+    - kafka
+    - zookeeper
+    - eureka
+    - bidcommandside
+    - bidqueryside
+    - itemcommandside
+    - itemqueryside
+  mem_limit: 8g
+  environment:
+    EUREKA: ${DOCKER_HOST_IP}:8761
+    DOCKER_HOST_IP: ${DOCKER_HOST_IP}
+    SPRING_DATASOURCE_URL: jdbc:mysql://mysql/eventuate
+    SPRING_DATASOURCE_USERNAME: mysqluser
+    SPRING_DATASOURCE_PASSWORD: mysqlpw
+    SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.jdbc.Driver
+    EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+    EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
+    EVENTUATELOCAL_CDC_DB_USER_NAME: root
+    EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
