--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -9,5 +9,5 @@ eureka:
       defaultZone: http://${EUREKA}/eureka/
   instance:
     preferIpAddress: true
-    #ip-address: ${DOCKER_HOST_IP}
+    ip-address: ${DOCKER_HOST_IP}
     non-secure-port: 9001
