--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <eventuateClientVersion>0.16.0.RELEASE</eventuateClientVersion>
         <eventuateLocalVersion>0.11.0.RELEASE</eventuateLocalVersion>
         <spring-boot.version>1.5.3.RELEASE</spring-boot.version>
+        <commons-io.version>2.5</commons-io.version>
         <java.version>1.8</java.version>
         <start-class>com.so.app.Application</start-class>
     </properties>
@@ -52,7 +53,6 @@
                 <artifactId>eventuate-local-java-embedded-cdc-autoconfigure</artifactId>
                 <version>${eventuateLocalVersion}</version>
             </dependency>
-
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
