--- a/item-service/pom.xml
+++ b/item-service/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>feign-clients</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
     </dependencies>
 
 
