--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -10,13 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
-        <module>bid-service-core</module>
-        <module>bid-service-web</module>
-        <module>commands</module>
-        <module>bid-service-commands</module>
+        <module>payment-service-core</module>
+        <module>payment-service-web</module>
+        <module>payment-commands</module>
     </modules>
 
-    <artifactId>bid-service</artifactId>
+    <artifactId>payment-service</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>com.so</groupId>
@@ -24,5 +24,6 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 
 </project>
