--- a/bid-service/bid-service-web/Dockerfile
+++ b/bid-service/bid-service-web/Dockerfile
@@ -1,3 +1,3 @@
 FROM java:openjdk-8u91-jdk
-CMD java ${JAVA_OPTS} -jar bid-service-command-web.jar
-COPY target/bid-service-command-web.jar .
+CMD java ${JAVA_OPTS} -jar bid-service-web.jar
+COPY target/bid-service-web.jar .
