--- a/docker-compose-eventuate-local.yml
+++ b/docker-compose-eventuate-local.yml
@@ -1,13 +1,12 @@
 zookeeper:
-  image: eventuateio/eventuateio-local-zookeeper:0.10.0
+  image: eventuateio/eventuateio-local-zookeeper:0.17.0.RELEASE
   ports:
     - 2181:2181
     - 2888:2888
     - 3888:3888
 
-
 kafka:
-  image: eventuateio/eventuateio-local-kafka:0.10.0
+  image: eventuateio/eventuateio-local-kafka:0.17.0.RELEASE
   ports:
     - 9092:9092
   links:
@@ -18,7 +17,7 @@ kafka:
     - ZOOKEEPER_SERVERS=zookeeper:2181
 
 mysql:
-  image: eventuateio/eventuateio-local-mysql:0.10.0
+  image: eventuateio/eventuate-tram-sagas-mysql:0.5.0.RELEASE
   ports:
     - 3306:3306
   environment:
@@ -26,9 +25,8 @@ mysql:
     - MYSQL_USER=mysqluser
     - MYSQL_PASSWORD=mysqlpw
 
-
 cdcservice:
-  image: eventuateio/eventuateio-local-cdc-service:0.10.0
+  image: eventuateio/eventuate-tram-cdc-mysql-service:0.6.0.RELEASE
   ports:
     - "8099:8080"
   links:
@@ -45,21 +43,17 @@ cdcservice:
     EVENTUATELOCAL_CDC_DB_USER_NAME: root
     EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
 
-mongodb:
-  extends:
-    file: docker-compose-common.yml
-    service: mongodb
-
-bidcommandside:
-  extends:
-    file: docker-compose-common.yml
-    service: bidcommandside
+bids:
+  build: ./bid-service/bid-service-web/
+  ports:
+   - "8001:8080"
   volumes:
-    - ./bid-service/bid-service-command-web/target:/app
+    - ./bid-service/bid-service-web/target:/app
   links:
     - mysql
     - kafka
     - zookeeper
+    - cdcservice
   environment:
     SPRING_DATASOURCE_URL: jdbc:mysql://mysql/eventuate
     SPRING_DATASOURCE_USERNAME: mysqluser
@@ -67,20 +61,18 @@ bidcommandside:
     SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.jdbc.Driver
     EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
-    EVENTUATELOCAL_CDC_DB_USER_NAME: root
-    EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
 
-bidqueryside:
-  extends:
-    file: docker-compose-common.yml
-    service: bidqueryside
+payments:
+  build: ./payment-service/payment-service-web/
+  ports:
+   - "8001:8080"
   volumes:
-    - ./bid-view/bid-view-query-web/target:/app
+    - ./payment-service/payment-service-web/target:/app
   links:
-    - mongodb
     - mysql
     - kafka
     - zookeeper
+    - cdcservice
   environment:
     SPRING_DATASOURCE_URL: jdbc:mysql://mysql/eventuate
     SPRING_DATASOURCE_USERNAME: mysqluser
@@ -88,48 +80,3 @@ bidqueryside:
     SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.jdbc.Driver
     EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
-    EVENTUATELOCAL_CDC_DB_USER_NAME: root
-    EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
-    SPRING_DATA_MONGODB_URI: mongodb://mongodb/bids
-
-itemcommandside:
-  extends:
-    file: docker-compose-common.yml
-    service: itemcommandside
-  volumes:
-    - ./item-service/item-service-command-web/target:/app
-  links:
-    - mysql
-    - kafka
-    - zookeeper
-  environment:
-    SPRING_DATASOURCE_URL: jdbc:mysql://mysql/eventuate
-    SPRING_DATASOURCE_USERNAME: mysqluser
-    SPRING_DATASOURCE_PASSWORD: mysqlpw
-    SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.jdbc.Driver
-    EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-    EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
-    EVENTUATELOCAL_CDC_DB_USER_NAME: root
-    EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
-
-itemqueryside:
-  extends:
-    file: docker-compose-common.yml
-    service: itemqueryside
-  volumes:
-    - ./item-view/item-view-query-web/target:/app
-  links:
-    - mongodb
-    - mysql
-    - kafka
-    - zookeeper
-  environment:
-    SPRING_DATASOURCE_URL: jdbc:mysql://mysql/eventuate
-    SPRING_DATASOURCE_USERNAME: mysqluser
-    SPRING_DATASOURCE_PASSWORD: mysqlpw
-    SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.jdbc.Driver
-    EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-    EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
-    EVENTUATELOCAL_CDC_DB_USER_NAME: root
-    EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
-    SPRING_DATA_MONGODB_URI: mongodb://mongodb/items
