--- a/payment-service/payment-service-core/pom.xml
+++ b/payment-service/payment-service-core/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>pservice</artifactId>
+    <artifactId>payment-service-core</artifactId>
 
     <dependencies>
         <dependency>
