--- a/payment-service/payment-service-web/Dockerfile
+++ b/payment-service/payment-service-web/Dockerfile
@@ -1,3 +1,3 @@
 FROM java:openjdk-8u91-jdk
-CMD java ${JAVA_OPTS} -jar item-service-command-web.jar
-COPY target/item-service-command-web.jar .
+CMD java ${JAVA_OPTS} -jar payment-service-web.jar
+COPY target/payment-service-web.jar .
